--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PCSGroup</string>
     <string name="title_details">Details</string>
+    <string name="empty_list">Sorry, The List is Empty</string>
+    <string name="error_list">Sorry, Error Happened. Cause: %s</string>
 </resources>
